<resources>
    <string name="app_name">Stock</string>
    <string name="title_buy">Закупка</string>
    <string name="title_sale">Продажа</string>
    <string name="title_stock">Склад</string>
    <string name="title_list">Графики</string>
    <string name="title_activity_list">Список товаров</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_good">AddGoodActivity</string>
    <string name="goodName">Название товара</string>
    <string name="labelQuantity">Количество</string>
    <string name="labelName">Название товара</string>
    <string name="addGood">Добавить товар</string>
    <string name="purchasePrice">Цена закупки</string>
    <string name="sellingPrice">Цена продажи</string>
    <string name="updateBtn">Обновить товар</string>
</resources>
